@startuml Teller

class Cash <<ICash>> {
  -shard_ptr<ILogger> iLogger
}
class GameFunds <<IGameFunds>> {
  -shard_ptr<ILogger> iLogger
}
GameFunds --* Cash

class Horse <<IAnimal>> {
  -shard_ptr<ILogger> iLogger
}
class GamePlayers <<IGamePlayers>> {
  -shard_ptr<ILogger> iLogger
  -shared_ptr<IGameFunds> iGameFunds;
}
GamePlayers --* GameFunds
GamePlayers --* Horse

class Teller {
  -shard_ptr<ILogger> iLogger
  -shared_ptr<IGameFunds> iGameFunds
  -shared_ptr<IGamePlayers> iGamePlayers
}
Teller --* GamePlayers
Teller --* GameFunds

class TellerConfig {
  -shared_ptr<IGameFunds> iGameFunds
  -shared_ptr<IGamePlayers> iGamePlayers
}
TellerConfig --* GamePlayers
TellerConfig --* GameFunds

@enduml